--- a/LLLMPlugin/app.config
+++ b/LLLMPlugin/app.config
@@ -2,7 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="LLLMPlugin.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="LLMPlugin.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
@@ -14,7 +14,7 @@
                 <value>http://localhost:11434/api/generate</value>
             </setting>
             <setting name="model" serializeAs="String">
-                <value>deepseek-r1:8b</value>
+                <value>starcoder2:latest</value>
             </setting>
         </LLLMPlugin.Properties.Settings>
     </userSettings>
